--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
-    font-family:"Jost",sans-serif;
+    font-family:sans-serif;
 }
 html{
    font-size: 62.5%;
@@ -27,13 +27,14 @@ h1,h2,h3,h4,h5,h6
     --btn-hover-bg-color:#003b99;
     --btn-box-shadow:rgba(100,100,111,0.2) 0px 7px 29px 0px;
     --footer-bg-color:#040d12;
+    --hover-color:yellow;
 }
 
 /* layout */
 .container
 {
    max-width:108rem;
-   margin:0 auto;
+   margin:auto;
    padding: 9.6rem 2.4rem;
 }
 
@@ -41,7 +42,7 @@ p,li,a,label{
     font-size: 1.8rem;
     letter-spacing: 0.1rem;
     font-weight: 400;
-    color:var(--para-color);
+    color:var(--supporting-color);
     line-height: 1.5;
 }
 a{
@@ -52,4 +53,60 @@ li{
 }
 
 /*reusable*/
+
+.navbar-right--side a:hover
+{
+    border-radius: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    color: var(--hover-color);
+}
 /*states*/
+
+/* Navigation Bar Start */
+.section-navbar
+{
+   width:100%;
+   box-shadow: rgba(0, 0, 0, 0.7) 0px 1px 4px;
+}
+.section-navbar .container{
+    display: flex;
+    justify-content: space-between;
+    padding:1rem 2rem 1rem 2rem;
+    align-items: center;
+}
+.navbar-right--side ul{
+    display: flex;
+    justify-content: space-evenly;
+}
+.navbar-left--side a{
+    background-image:linear-gradient(
+        180deg, 
+        hsl(60, 100%, 50%), 
+        hsl(0, 0%, 73%)
+    );
+    background-clip:text;
+    color: transparent;
+    font-weight: 900;
+    font-size: 2.4rem;
+    font-family: "Poppins";
+    line-height: 1.5;
+    letter-spacing: 0.2rem;
+}
+.navbar-right--side a{
+    display: inline-block;
+    padding: 0.5rem 1rem;
+}
+/* Navigation Bar Ends */
+
+/* Hero Section starts*/
+main
+{
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgb(15, 15, 15) 0%, rgba(111,111,132,1) 87%,
+    rgba(140,137,137,1) 100%);
+    height:100vh;
+    position: relative;
+    top:-8rem;
+    z-index: -1;
+}
+/* Hero section ends*/
