change nav links color

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ p,li,a,label{
     font-size: 1.8rem;
     letter-spacing: 0.1rem;
     font-weight: 400;
-    color:var(--supporting-color);
+    color:var(--white-color);
     line-height: 1.5;
 }
 a{
@@ -56,7 +56,7 @@ li{
 
 .navbar-right--side a:hover
 {
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     color: var(--hover-color);
 }
@@ -81,14 +81,13 @@ li{
 .navbar-left--side a{
     background-image:linear-gradient(
         180deg, 
-        hsl(60, 100%, 50%), 
-        hsl(0, 0%, 73%)
+       rgb(246, 254, 3),
+       rgb(209, 209, 209)
     );
     background-clip:text;
     color: transparent;
     font-weight: 900;
     font-size: 2.4rem;
-    font-family: "Poppins";
     line-height: 1.5;
     letter-spacing: 0.2rem;
 }
