--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h1,h2,h3,h4,h5,h6
     --btn-hover-bg-color:#003b99;
     --btn-box-shadow:rgba(100,100,111,0.2) 0px 7px 29px 0px;
     --footer-bg-color:#040d12;
-    --hover-color:yellow;
+    --hover-color:rgb(5, 247, 255);
 }
 
 /* layout */
@@ -78,18 +78,10 @@ li{
     display: flex;
     justify-content: space-evenly;
 }
-.navbar-left--side a{
-    background-image:linear-gradient(
-        180deg, 
-       rgb(246, 254, 3),
-       rgb(209, 209, 209)
-    );
-    background-clip:text;
-    color: transparent;
-    font-weight: 900;
-    font-size: 2.4rem;
-    line-height: 1.5;
-    letter-spacing: 0.2rem;
+.navbar-left--side a
+{
+    
+   
 }
 .navbar-right--side a{
     display: inline-block;
