--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ h1,h2,h3,h4,h5,h6
 }
 /*theme*/
 :root{
-    --main-color:#a2a2a2;
-    --supporting-color:#cecece;
+    --main-color:#2fdef9;
+    --supporting-color:#f2fa09;
     --font-color:#424242;
     --bg-color:#f7fcff;
     --heading-color:#000a19;
@@ -27,7 +27,7 @@ h1,h2,h3,h4,h5,h6
     --btn-hover-bg-color:#003b99;
     --btn-box-shadow:rgba(100,100,111,0.2) 0px 7px 29px 0px;
     --footer-bg-color:#040d12;
-    --hover-color:rgb(5, 247, 255);
+    --hover-color:rgb(4, 118, 122);
 }
 
 /* layout */
@@ -38,12 +38,13 @@ h1,h2,h3,h4,h5,h6
    padding: 9.6rem 2.4rem;
 }
 
-p,li,a,label{
-    font-size: 1.8rem;
+p,li,a,label,span{
+    font-size: 1.6rem;
     letter-spacing: 0.1rem;
-    font-weight: 400;
-    color:var(--white-color);
+    font-weight: 500;
+    color:var(--para-color);
     line-height: 1.5;
+    font-family: "Poppins";
 }
 a{
     text-decoration: none;
@@ -51,22 +52,29 @@ a{
 li{
     list-style: none;
 }
+.grid{
+    display: grid;
+}
+.grid-two--cols{
+    grid-template-columns: repeat(2,1fr);
+}
 
 /*reusable*/
 
+/*states*/
 .navbar-right--side a:hover
 {
     border-radius: 0.5rem;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    box-shadow: rgba(0, 0, 0, 0.9) 0px 1px 4px;
     color: var(--hover-color);
 }
-/*states*/
+
 
 /* Navigation Bar Start */
 .section-navbar
 {
    width:100%;
-   box-shadow: rgba(0, 0, 0, 0.7) 0px 1px 4px;
+   box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 4px;
 }
 .section-navbar .container{
     display: flex;
@@ -77,27 +85,90 @@ li{
 .navbar-right--side ul{
     display: flex;
     justify-content: space-evenly;
+    gap:1rem;
 }
-.navbar-left--side a
-{
-    
-   
-}
+
 .navbar-right--side a{
     display: inline-block;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.5rem;
+    font-size: 1.4rem;
+    color: rgb(81, 81, 81);
+    font-weight: 600;
+}
+.navbar-left--side a{
+    color:#023f71;
 }
 /* Navigation Bar Ends */
 
 /* Hero Section starts*/
 main
 {
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgb(15, 15, 15) 0%, rgba(111,111,132,1) 87%,
-    rgba(140,137,137,1) 100%);
-    height:100vh;
+    background-image: linear-gradient(270deg,#5799b1,#bdffdb);
     position: relative;
     top:-8rem;
     z-index: -1;
+    height: 100vh;
+    background-attachment: fixed;
+}
+
+
+.section-hero--image{
+    display: flex;
+    justify-content: end;
+    margin-top: 17rem;
+}
+.grid-two--cols img{
+    width: 350px;
+    height: 350px;
+    background-color: transparent;
+    border-radius: 50%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+   
+    transition: all 0.3s linear ;
+}
+
+.section-hero--content{
+    margin-top: 15rem;
+    
+}
+.hero-subheading{
+    font-weight: 700;
+    font-size: 1.8rem;
+}
+
+.hero-para{
+    text-align: justify;
+}
+.section-hero--content .hero-heading{
+    color: transparent;
+    letter-spacing: 0.4rem;
+    font-size: 4rem;
+    position: relative;
+    margin-bottom: 5rem;
+    font-weight: 900;
+}
+.section-hero--content .hero-heading:after
+{
+    content:"ANURAG TIWARI";
+    color: rgb(0, 59, 95);
+    position: absolute;
+    overflow: hidden;
+    animation-name: myname;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    top:0;
+    left:0;
+    white-space: nowrap;
+    font-family: "Poppins";
+}
+
+@keyframes myname
+{
+    0%{
+        width: 0%;
+    }
+    100%{
+    width: 100%;
+    }
 }
 /* Hero section ends*/
