--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ main
     top:-8rem;
     z-index: -1;
     background-attachment: fixed;
-    height:100vh;
+    object-fit: cover;
 }
 
 
@@ -600,8 +600,8 @@ input{
 .active .section-navbar
 {
    width:100%;
-   box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 4px;
-   background-color: #000a19;
+   box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 4px;
+   background-color: #000000;
 }
 .section-navbar .container{
     display: flex;
@@ -620,22 +620,32 @@ input{
     padding: 0.5rem 0.5rem;
     font-size: 1.5rem;
     font-weight: 600;
-    color: rgb(212, 207, 207);
+    color: rgb(215, 215, 215);
 }
 .active .navbar-left--side a{
     color:#a19e9e;
+}
+.active .navbar-right--side a:hover
+{
+    border-radius: 0.5rem;
+    background: rgba(255, 255, 255, 0.15);
+    color: white;
 }
 /* Navigation Bar Ends */
 
 /* Hero Section starts*/
 .active main
 {
-    background-image: linear-gradient(225deg,#2f86ab 20%,#63faa7);
+    background-image: url("https://images.hdqwalls.com/download/batman-dark-4k-4s-1920x1080.jpg");
     position: relative;
     top:-8rem;
     z-index: -1;
     background-attachment: fixed;
-    height:100vh;
+    background-size: contain;
+   /* background-position: center;*/
+    background-repeat: no-repeat;
+    background-color: #000000;
+    
 }
 
 
@@ -644,28 +654,31 @@ input{
     justify-content: end;
     margin-top: 17rem;
 }
-.grid-two--cols img{
+.active .grid-two--cols img{
     width: 35rem;
     height: 35rem;
     background-color: transparent;
     border-radius: 50%;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-    filter: brightness(0.7);
+    box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset, rgba(255, 255, 255, 0.3) 0px 18px 36px -18px inset;
+    filter: brightness(1.1);
+    border: 2px solid rgb(255, 255, 255);
 }
 
 .section-hero--content{
     margin-top: 15rem;
     
 }
-.hero-subheading{
+.hero-subheading
+{
     font-weight: 600;
     font-size: 1.8rem;
     color: rgb(255, 255, 255);
+   /* text-align:*/
 }
 
-.hero-para{
+.active .hero-para{
     text-align: justify;
-    color: rgb(32, 32, 32);
+    color: rgb(239, 237, 237);
     background: rgba(255, 255, 255, 0.15); /* Semi-transparent background */
     border-radius: 15px; /* Rounded corners */
     padding: 3rem;
@@ -686,10 +699,10 @@ input{
     overflow: hidden;
     display: inline-block;
 }
-.section-hero--content .hero-heading span:after
+.active .section-hero--content .hero-heading span:after
 {
     content:"ANURAG TIWARI";
-    background: linear-gradient(270deg, #000000FC 0%, #3b3b3b 50%, #000000 100%);
+    background: linear-gradient(270deg, #fffffffc 0%, #646363 50%, #ffffff 100%);
     background-clip: text;
     position: absolute;
     overflow: hidden;
@@ -700,6 +713,7 @@ input{
     left:0;
     white-space: nowrap;
     font-family: "Poppins";
+    
 }
 
 @keyframes myname
@@ -714,3 +728,219 @@ input{
 
 
 /* Hero section ends*/
+
+/* Education Section Starts*/
+
+.active .section-education{
+    background-image:  
+    url('https://wallpapercave.com/wp/wp7264241.jpg');
+    opacity: 0.9;
+    margin-top: -8rem;
+    background-attachment: fixed;
+    position: relative;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    /*width: 100%;
+    height: 100%;*/
+    background-color: #000000;
+
+}
+.custom-shape-divider-bottom-1716958659 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1716958659 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 112px;
+}
+
+.active .custom-shape-divider-bottom-1716958659 .shape-fill {
+    fill: #000000;
+}
+
+.container-edu {
+    position: relative;
+    margin-bottom: 15rem;
+}
+
+.container-edu::after {
+    content: '';
+    position: absolute;
+    width: 2rem;
+    background-color: rgb(222, 222, 222);
+    top: 0;
+    bottom: 0;
+    left: 3rem;
+    margin-left: -3px;
+    border-radius: 1rem;
+}
+.edu-div {
+    position: relative;
+    margin-left: 6rem;
+    margin-top: 10rem;
+}
+
+.edu-div::after {
+    content: '';
+    position: absolute;
+    width: 2.5rem;
+    height: 2.5rem;
+    left: -4rem;
+    background-color: rgb(0, 0, 0);
+    border: 4px solid #191919;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+
+.edu-div{
+    background-color: #111111;
+    padding:2rem 4rem;
+    border-radius: 1.5rem;
+    width: 80%;
+}
+
+.common-heading--edu{
+    color: #eff0f0;
+    margin-bottom: 1rem;
+}
+
+.common-para--edu{
+    color:rgb(216, 216, 216);
+}
+
+.section-education .container .main-heading{
+    font-size: 4rem;
+    word-spacing: 2rem;
+    font-weight: 700;
+    color:var(--bg-color);
+}
+.container-main{
+    padding:3.6rem 2.4rem 0 2.4rem;
+}
+
+/* EDUCATION SECTION ENDS */
+
+/*Skill Section Starts */
+
+.section-skill{
+    background-color: #191919;
+}
+
+.section-skill .container-main
+{
+    font-size: 4rem;
+    word-spacing: 2rem;
+    font-weight: 700;
+    color:rgb(245, 245, 212);
+
+}
+
+.skills-div i{
+    font-size: 3rem;
+    background-color:  #1e1e1e;
+    border-radius:50%;
+    height: 6rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#ffffff;
+    margin-bottom: 2rem;
+}
+.skill-common--heading{
+    color: var(--heading-color);
+    margin-bottom: 1rem;
+    font-size: 2rem;
+}
+.skill-common--para{
+    font-size: 1.4rem;
+    color:#040d12
+}
+
+.skills-div{
+    background-color: antiquewhite;
+    padding: 2rem 4rem;
+    border-radius:0.5rem;
+    transition: all 0.2s;
+}
+
+.section-skill .grid{
+    gap:6rem;
+}
+
+.skills-div:hover{
+   scale:1.05;
+}
+
+
+/*Skill section ends */
+
+/* Project Section Starts */
+
+.active .section-project
+{
+    background-color: #000000;
+    height: 30rem;
+    text-align: center;
+    padding-top: 10rem;
+    font-size: 3rem;
+    font-weight: 900;
+    color: bisque;
+
+    & span{
+        font-size: 4rem;
+        margin-bottom:4rem;
+        color: #787777;
+    }
+}
+
+/* Project Section Ends */
+
+/* Contact Section Starts */
+
+
+.contact-form{
+    width: 60%;
+    margin: 0 auto;
+    box-shadow:rgba(60,64,67,0.3) 0px 1px 2px 0px, rgba(60,64,67,0.15) 0px 2px 6px 2px;
+    border-radius:0.5rem;
+    background-color: rgb(235, 235, 222);
+    padding:2rem 5rem;
+    
+}
+.mb-3{
+    margin-bottom: 3.2rem;
+}
+
+label{
+    text-transform: capitalize;
+}
+
+input{
+    width:90%;
+    padding:1.4rem 2.4rem;
+}
+
+.contact-form .contact-heading{
+    text-align: center;
+    font-size:2rem;
+    color: var(--heading-color);
+}
+
+.section-contact .container{
+    padding:5rem 2.4rem;
+}
+
+/* Contact Section ends */
+
