--- a/style.css
+++ b/style.css
@@ -590,8 +590,8 @@ input{
 .active .toggle .text 
 {
     font-size: 1.5rem;
-    font-weight: 400;
-    color: white;
+    font-weight: 600;
+    color: rgb(253, 0, 0);
 }
 
 /* TOGGLE BUTTON END */
@@ -620,7 +620,7 @@ input{
     padding: 0.5rem 0.5rem;
     font-size: 1.5rem;
     font-weight: 600;
-    color: rgb(215, 215, 215);
+    color: rgb(255, 0, 0);
 }
 .active .navbar-left--side a{
     color:#a19e9e;
@@ -659,20 +659,20 @@ input{
     height: 35rem;
     background-color: transparent;
     border-radius: 50%;
-    box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset, rgba(255, 255, 255, 0.3) 0px 18px 36px -18px inset;
-    filter: brightness(1.1);
-    border: 2px solid rgb(255, 255, 255);
+    box-shadow: rgba(163, 1, 1, 0.25) 0px 30px 60px -12px inset, rgba(255, 255, 255, 0.3) 0px 18px 36px -18px inset;
+    filter: brightness(0.8);
+    border: 1px solid rgb(255, 51, 51);
 }
 
 .section-hero--content{
     margin-top: 15rem;
     
 }
-.hero-subheading
+.active .hero-subheading
 {
-    font-weight: 600;
+    font-weight: 800;
     font-size: 1.8rem;
-    color: rgb(255, 255, 255);
+    color: red;
    /* text-align:*/
 }
 
@@ -796,7 +796,7 @@ input{
     height: 2.5rem;
     left: -4rem;
     background-color: rgb(0, 0, 0);
-    border: 4px solid #191919;
+    border: 4px solid #ff0000;
     top: 15px;
     border-radius: 50%;
     z-index: 1;
@@ -811,7 +811,7 @@ input{
 }
 
 .common-heading--edu{
-    color: #eff0f0;
+    color: #ff3939;
     margin-bottom: 1rem;
 }
 
@@ -823,7 +823,7 @@ input{
     font-size: 4rem;
     word-spacing: 2rem;
     font-weight: 700;
-    color:var(--bg-color);
+    color:red;
 }
 .container-main{
     padding:3.6rem 2.4rem 0 2.4rem;
@@ -837,12 +837,12 @@ input{
     background-color: #191919;
 }
 
-.section-skill .container-main
+.active .section-skill .container-main
 {
     font-size: 4rem;
     word-spacing: 2rem;
     font-weight: 700;
-    color:rgb(245, 245, 212);
+    color:rgb(255, 0, 0);
 
 }
 
@@ -858,22 +858,31 @@ input{
     color:#ffffff;
     margin-bottom: 2rem;
 }
-.skill-common--heading{
-    color: var(--heading-color);
+.active .skill-common--heading{
+    color: rgb(252, 43, 43);
     margin-bottom: 1rem;
     font-size: 2rem;
 }
-.skill-common--para{
+.active .skill-common--para{
     font-size: 1.4rem;
-    color:#040d12
+    color:#ffffff
 }
 
-.skills-div{
-    background-color: antiquewhite;
+.active .skills-div{
+    background-color: transparent;
     padding: 2rem 4rem;
     border-radius:0.5rem;
-    transition: all 0.2s;
+    transition: all 0s;
+    position: relative;
+    background-image: url('skillsbg1.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position:50%;
+    /*filter: blur(8px);*/
+
 }
+
+
 
 .section-skill .grid{
     gap:6rem;
