--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@ main
     position: relative;
     margin-left: 6rem;
     margin-top: 10rem;
+    z-index:5
 }
 
 .edu-div::after {
@@ -287,7 +288,7 @@ main
     border: 4px solid #04b353;
     top: 15px;
     border-radius: 50%;
-    z-index: 1;
+    z-index: 4;
 }
 
 
